Add Recording Features.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,12 @@
     <string name="tv_guide">TV Guide/</string>
     <string name="update_data">Update data....</string>
     <string name="download">DOWNLOAD</string>
+    <string name="download_started">Download started</string>
+    <string name="live_recording">Live Recording</string>
+    <string name="recording_dots">Recording...</string>
+    <string name="download_completed">Download completed</string>
+    <string name="download_failed">Download failed</string>
+    <string name="download_stopped">Download stopped</string>
     <string name="request_download">Downloading latest version.</string>
 
     <string name="clear_all">Select All</string>
